Update project documentation and application code

--- a/dummy-app/public/index.html
+++ b/dummy-app/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SSO Demo - Accueil</title>
+    <title>SSO Demo - Home</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -83,19 +83,19 @@
 <body>
     <div class="welcome-container">
         <h1>🔐 SSO Keycloak Demo</h1>
-        <p>Application de démonstration Single Sign-On avec Keycloak</p>
+        <p>Demo Single Sign-On application using Keycloak</p>
         
-        <!-- Bouton de connexion qui redirige vers Keycloak -->
-        <a href="/login" class="btn btn-login">🔑 Se connecter avec Keycloak</a>
+        <!-- Login button that redirects to Keycloak -->
+        <a href="/login" class="btn btn-login">🔑 Sign in with Keycloak</a>
         
         <div class="info-box">
-            <strong>ℹ️ Fonctionnalités :</strong>
+            <strong>ℹ️ Features:</strong>
             <ul class="features">
-                <li>Authentification SSO via Keycloak</li>
-                <li>Gestion des rôles (Utilisateur/Admin)</li>
-                <li>Session sécurisée avec JWT</li>
-                <li>Intégration OIDC complète</li>
-                <li>Monitoring avec Kafka/ELK</li>
+                <li>SSO authentication via Keycloak</li>
+                <li>Role management (User/Admin)</li>
+                <li>Secure sessions with JWT</li>
+                <li>Full OIDC integration</li>
+                <li>Monitoring with Kafka/ELK</li>
             </ul>
         </div>
     </div>
